[gd_scene load_steps=8 format=3 uid="uid://b2u18q70bdv6a"]

[ext_resource type="Theme" uid="uid://cbrysnciqlhs0" path="res://Assets/CustomThemes/MainTheme.tres" id="1_ktixp"]
[ext_resource type="Script" path="res://Scripts/Tutorial.gd" id="2_a6yom"]
[ext_resource type="Texture2D" uid="uid://8ry5dyrg5xp8" path="res://Assets/Images/Tutorial 1.png" id="3_tmcfm"]
[ext_resource type="Texture2D" uid="uid://bwebdur3qnqk4" path="res://Assets/Images/Tutorial 2.png" id="4_durk2"]
[ext_resource type="Texture2D" uid="uid://btyioy7u4dk4m" path="res://Assets/Images/Tutorial 3.png" id="5_jop7k"]
[ext_resource type="Texture2D" uid="uid://dadx8jvtxnlxm" path="res://Assets/Images/Tutorial 4.png" id="6_lspxe"]
[ext_resource type="AudioStream" uid="uid://coceogio7krme" path="res://Assets/Sfx/Pop Sfx.mp3" id="7_htv3r"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ktixp")
script = ExtResource("2_a6yom")

[node name="PanelTutorial" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelTutorialTitle" type="Label" parent="PanelTutorial"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_top = 40.0
offset_right = 122.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Cara Bermain"

[node name="ControlTutorial1" type="Control" parent="PanelTutorial"]
anchors_preset = 0
offset_left = 128.0
offset_top = 88.0
offset_right = 1024.0
offset_bottom = 576.0

[node name="LabelTutorial1" type="Label" parent="PanelTutorial/ControlTutorial1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -297.5
offset_top = -124.0
offset_right = 297.5
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Ketika hari mulai, pelanggan akan datang untuk membeli kopi yang kita jual"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRectTutorial1" type="TextureRect" parent="PanelTutorial/ControlTutorial1"]
layout_mode = 0
offset_left = 160.0
offset_top = 17.0
offset_right = 1312.0
offset_bottom = 665.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_tmcfm")

[node name="ControlTutorial2" type="Control" parent="PanelTutorial"]
visible = false
anchors_preset = 0
offset_left = 128.0
offset_top = 88.0
offset_right = 1024.0
offset_bottom = 576.0

[node name="LabelTutorial2" type="Label" parent="PanelTutorial/ControlTutorial2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -132.0
offset_right = 296.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Klik salah satu dari ketiga jenis kopi yang ada di dekat stand kopi sesuai dengan kopi yang muncul di atas kepala pelanggan.
Hati-hati, gambar kopi yang diinginkan pelanggan akan menghilan dalam beberapa detik setelah muncul."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRectTutorial2" type="TextureRect" parent="PanelTutorial/ControlTutorial2"]
layout_mode = 0
offset_left = 160.0
offset_top = 17.0
offset_right = 1312.0
offset_bottom = 665.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_durk2")

[node name="ControlTutorial3" type="Control" parent="PanelTutorial"]
visible = false
anchors_preset = 0
offset_left = 128.0
offset_top = 88.0
offset_right = 1024.0
offset_bottom = 576.0

[node name="LabelTutorial3" type="Label" parent="PanelTutorial/ControlTutorial3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -290.0
offset_top = -132.0
offset_right = 290.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Kita punya kesempatan untuk berjualan sebanyak 3 hari.
Laporan penjualan harian akan muncul ketika hari telah selesai. Hasil penjualan hari ini akan menentukan banyaknya pelanggan yang datang di hari berikutnya."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRectTutorial3" type="TextureRect" parent="PanelTutorial/ControlTutorial3"]
layout_mode = 0
offset_left = 160.0
offset_top = 17.0
offset_right = 1312.0
offset_bottom = 665.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_jop7k")

[node name="ControlTutorial4" type="Control" parent="PanelTutorial"]
visible = false
anchors_preset = 0
offset_left = 128.0
offset_top = 88.0
offset_right = 1024.0
offset_bottom = 576.0

[node name="LabelTutorial4" type="Label" parent="PanelTutorial/ControlTutorial4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -316.0
offset_top = -133.0
offset_right = 316.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Di akhir permainan kita bisa melihat hasil laporan penjualan keseluruhan. Seperti total pelanggan, jumlah setiap feedback pelanggan, modal jualan, pendapatan, modal iklan, dan selisih pendapatan apakah untung atau rugi."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRectTutorial4" type="TextureRect" parent="PanelTutorial/ControlTutorial4"]
layout_mode = 0
offset_left = 161.0
offset_top = 17.0
offset_right = 1313.0
offset_bottom = 665.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_lspxe")

[node name="ButtonNext" type="Button" parent="PanelTutorial"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -72.0
offset_right = 192.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 20
text = "Selanjutnya"

[node name="ButtonPrev" type="Button" parent="PanelTutorial"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -72.0
offset_right = -64.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 20
text = "Kembali"

[node name="PopSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_htv3r")
volume_db = -10.0

[connection signal="pressed" from="PanelTutorial/ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="PanelTutorial/ButtonPrev" to="." method="_on_button_prev_pressed"]
